--- a/assets/scss/bases-light.scss
+++ b/assets/scss/bases-light.scss
@@ -200,16 +200,6 @@
         padding: 12px;
     }
 }
-.generic-table
-tr td:nth-child(4){
-    width: 70px;
-}
-.generic-table tr td:nth-child(5){
-    width: 70px;
-}
-.generic-table tr td:nth-child(6){
-    width: 70px;
-}
 .table-result{
     @include texto(16px, $grey, 'Roboto Regular');
     padding: 12px;
@@ -221,7 +211,7 @@ tr td:nth-child(4){
 }
 .table-generic-opts{
     @include img-fit(30px, 30px);
-    margin: 10px;
+    margin: 10px 0 10px 0;
 }
 
 /* MODAL GENERICO */
@@ -236,11 +226,11 @@ tr td:nth-child(4){
 	background: rgba(0, 0, 0, 0.5);
 	.generic-modal-wrapper{
 		//Holder do modal
-		@include bloco($width: auto, $height: auto);
-		@include display(flex, column, center, center);
+		@include bloco(100%, 500px, auto);
+		@include display(flex, column, center, null);
 		box-sizing: border-box;
-		padding-left: 30px;
-		padding-right: 30px;
+		padding-left: 20px;
+		padding-right: 20px;
 		border-radius: 10px;
 		background-color: $white;
 		position: relative;
@@ -252,23 +242,6 @@ tr td:nth-child(4){
 		    >img{
 		    	//Imagem do botão
 				@include img-fit(21px, 21px);
-			}
-		}
-		>p{
-			//Texto do modal
-			width: 80%;
-			display: block;
-			font-family: "Roboto Regular";
-			color: #282828;
-			text-align: center;
-			font-size: 16px;
-			line-height: 21px;
-			margin: 0 auto;
-			a{
-				//Link do texto do modal
-				font-family: "Roboto Bold Italic";
-				color: #E85858;
-				text-decoration: none;
 			}
 		}
 	}
