--- a/assets/scss/cms/stylesheet-cms.scss
+++ b/assets/scss/cms/stylesheet-cms.scss
@@ -889,6 +889,9 @@ img.btn-logout:hover {
             .title{
                 color: $white;
             }
+            >p{
+                color: $mediumgrey;
+            }
         }
     }
 }
@@ -915,8 +918,8 @@ img.btn-logout:hover {
         @include position(absolute, null, 10px, 10px, null);
     }
     >div{
-        display: flex;
         width: 100%;
+        height: auto;
         >h2{
             @include texto(18px, $black, 'Roboto Bold');
             margin: 0px;
@@ -1168,53 +1171,57 @@ img.btn-logout:hover {
     }
 }
 
-[data-crud-template] {
-    display: none;
-}
-
 //Diario de Bordo
 .diario-border-wrapper{
     @include bloco(100%, 100%, 100%);
-    @include display(flex, row);
-    table{@include bloco(100%, 100%, 100%);}
+    table{
+        @include bloco(100%, 100%, 100%);
+    }
 }
 
-.menu-lateral-diario{
-    @include bloco(100%, 350px, 100vh);
-    background: $olivine;
-    >div{
-        h2{
-            @include texto(28px,  $white, "Roboto Bold");
-            padding: 16px;
+#modal-diario-header{
+    display: flex;
+    width: 100%;
+    height: auto;
+    >figure{
+        width: 48px;
+        height: 48px;
+        border-radius: 50%;
+        overflow: hidden;
+        box-shadow: $shadow;
+        >img{
+            @include img-fit(48px, 48px);
         }
-        background-color: bisque;
     }
-    table{
-        @include bloco($width: 100%, $height: auto);
-        border-collapse: collapse;
-        #contact-table-trow{
-            background-color: $mediumgrey;
-            >td{
-                >span{
-                    @include texto(18px, $black, 'Roboto Bold');
-                    padding: 12px;
-                }
-            }
-        }
-        .contact-table-rrow{
-            >td{
-                >span{
-                    @include texto(16px, $grey, 'Roboto Medium');
-                }
-                >div>img{
-                    @include img-fit(40px, 40px);
-                    display: inline-block;
-                    padding: 10px 0px 10px 0px;
-                }
-            }
-        }
+    >h2{
+        font-size: 20px;
+        color: $black;
     }
 }
+#email-label-modal-diario{
+    @include texto(16px, $grey, 'Roboto Medium Italic', 19px);
+}
+#modal-diario-assunto{
+    @include texto(18px, $black, 'Roboto Bold', 23px);
+    margin-top: 20px;
+}
+.modal-diario-text{
+    //Texto do modal
+    width: 90%;
+    display: block;
+    font-family: "Roboto Regular";
+    color: $darkgrey;
+    text-align: left;
+    font-size: 16px;
+    line-height: 21px;
+    a{
+        //Link do texto do modal
+        font-family: "Roboto Bold Italic";
+        color: #E85858;
+        text-decoration: none;
+    }
+}
+
 
 .profile-wrapper{
     @include bloco(100%, 100%, 90vh);
