--- a/assets/scss/cms/stylesheet-cms.scss
+++ b/assets/scss/cms/stylesheet-cms.scss
@@ -862,7 +862,7 @@ img.btn-logout:hover {
 
     .three { grid-area: three; }
 
-    .four { grid-area: four; }
+    .four { grid-area: four; cursor: pointer; }
 
     .five { grid-area: five; }
 
@@ -899,8 +899,14 @@ img.btn-logout:hover {
                 box-sizing: border-box;
                 border: 5px solid $olivine;
                 z-index: 99;
+                box-shadow: $shadow;
+                transition: 200ms ease-out;
                 img{
                     @include img-fit(100%, 100%);
+                }
+                &:hover{
+                    transform: scale(1.05);
+                    transition: 200ms ease-out;
                 }
             }
         }
@@ -919,7 +925,6 @@ img.btn-logout:hover {
         }
         &:hover{
             background: linear-gradient(45deg, $olivine, $gold);
-            cursor: pointer;
             .index-profile-infos{
                 >h2{
                     @include texto(23px, $white, 'Roboto Bold', 28px, center);
@@ -946,6 +951,8 @@ img.btn-logout:hover {
     position: relative;
     @include display(flex, row, flex-start, center);
     margin: 0 20px 20px 20px;
+    box-shadow: $shadow;
+    transition: 200ms ease-out;
     >figure{
         @include bloco($width: 50px, $height: 50px);
         min-width: 50px;
@@ -971,6 +978,9 @@ img.btn-logout:hover {
             @include texto(16px, $grey, 'Roboto Medium Italic');
             margin: 0px;
         }
+    }
+    &:hover{
+        transform: scale(1.05);
     }
 }
 .contact-wrapper{
