--- a/assets/scss/cms/stylesheet-cms.scss
+++ b/assets/scss/cms/stylesheet-cms.scss
@@ -227,7 +227,7 @@ body {
         padding: 5px;
         @include display(flex, row, space-between, center);
         flex-shrink: 0;
-        >div{
+        >form{
             display: flex;
             align-items: center;
             >input{
@@ -247,6 +247,10 @@ body {
             >img{
                 cursor: pointer;
             }
+        }
+        >div{
+            display: flex;
+            align-items: center;
         }
         #titulo-pagina{
             @include texto(21px, $white, 'Roboto Bold');
