--- a/assets/scss/cms/stylesheet-cms-dark.scss
+++ b/assets/scss/cms/stylesheet-cms-dark.scss
@@ -257,7 +257,6 @@ body {
             @include texto(21px, $white, 'Roboto Bold');
             padding-left: 20px;
             text-transform: uppercase;
-            flex: 0 0 350px;
         }
         #ultimas-interacoes {
             @include texto(18px, $white, 'Roboto Bold');
@@ -1112,7 +1111,18 @@ img.btn-logout:hover {
     width: 80%;
     margin: 0 auto;
 }
-
+.categoria-block{
+    width: 100%;
+    height: auto;
+    display: flex;
+}
+.categoria-form-right{
+    width: 100%;
+    max-width: 400px;
+    height: 100vh;
+    background-color: $darkgrey;
+    overflow: auto;
+}
 .status-prato{
     @include bloco($width: auto, $height: 25px);
 	@include position(absolute, 13px, 10px, $bottom: null, $left: null);
