--- a/assets/scss/cms/stylesheet-cms-dark.scss
+++ b/assets/scss/cms/stylesheet-cms-dark.scss
@@ -1403,16 +1403,16 @@ input:-webkit-autofill {
 .fit-session-block{
     @include bloco(100%, 100%, auto);
     @include display(flex, row, flex-start, flex-start);
-    .fit-session-aside{
-        @include bloco(100%, 400px, 100vh);
-        background-color: $darkgrey;
-        >h2{
-            @include texto(21px, $white, 'Roboto Bold', 28px, left);
-        }
-        >p{
-            @include texto(16px, $mediumgrey, 'Roboto Medium', 21px, left);
-            width: 90%;
-        }
+}
+.explanation-aside{
+    @include bloco(100%, 400px, 100vh);
+    background-color: $darkgrey;
+    >h2{
+        @include texto(21px, $white, 'Roboto Bold', 28px, left);
+    }
+    >p{
+        @include texto(16px, $mediumgrey, 'Roboto Medium', 21px, left);
+        width: 90%;
     }
 }
 
