--- a/assets/scss/cms/stylesheet-cms.scss
+++ b/assets/scss/cms/stylesheet-cms.scss
@@ -296,6 +296,7 @@ img.btn-logout:hover {
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 #list-content {
@@ -739,10 +740,9 @@ img.btn-logout:hover {
     transform: rotate(180deg);
 }
 #page-actions {
-    @include bloco($width: 100%, $height: 50px); @include display(flex, row, space-between, center);
-    padding: 0 20px;
-    box-sizing: border-box;
-    margin: 15px 0px;
+    text-decoration: none;
+    @include display(flex, row, center, center);
+    cursor: pointer;
     >a {
         text-decoration: none;
         @include display(flex, row, center, center);
@@ -1074,6 +1074,15 @@ img.btn-logout:hover {
 //Pratos
 .pratos-wrapper{
     @include bloco($width: 100%, $height: auto);
+}
+#add-prato-form{
+    @include bloco(100%, 400px, 100vh);
+    @include position(absolute, 0, 0, 0, null);
+    background: $lightgrey;
+    display: none;
+}
+.elementPhoto{
+    max-width: 200px;
 }
 .edit-btns{
 	@include bloco($width: auto, $maxwidth: null, $height: 30px);
