--- a/assets/scss/cms/stylesheet-cms.scss
+++ b/assets/scss/cms/stylesheet-cms.scss
@@ -740,12 +740,15 @@ img.btn-logout:hover {
     transform: rotate(180deg);
 }
 #page-actions {
-    text-decoration: none;
-    @include display(flex, row, center, center);
-    cursor: pointer;
-    >a {
+    @include bloco($width: 100%, $height: 50px);
+    @include display(flex, row, space-between, center);
+    padding: 0 20px;
+    box-sizing: border-box;
+    margin: 15px 0px;
+    >a, div{
         text-decoration: none;
         @include display(flex, row, center, center);
+        cursor: pointer;
         >img {
             width: 50px;
             height: 50px;
