--- a/assets/scss/bases-dark.scss
+++ b/assets/scss/bases-dark.scss
@@ -196,6 +196,10 @@
         cursor: pointer;
     }
 }
+.show-image{
+    max-width: 200px;
+    display: block;
+}
 .generic-table tr:first-child{
     background-color: $darkgrey;
     >td span{
