--- a/assets/scss/style-light.scss
+++ b/assets/scss/style-light.scss
@@ -17,7 +17,7 @@ body{
 	/*Container-mãe do block do site*/
 	@include bloco(100%, 1200px, auto);
 	@include display(flex, column);
-	background-color: $lightgrey;
+	background-color: $white;
     margin: 124px auto 0px auto;
 	z-index: 1;
 }
