--- a/assets/scss/bases-light.scss
+++ b/assets/scss/bases-light.scss
@@ -508,12 +508,12 @@
 /*CLASSES DO SLIDER*/
 .slider-1200-250{
 	@include bloco(100%, 1200px, auto);
+    border-radius: 5px;
+    overflow: hidden;
 	.slider_content{
         width: 100%;
-        height: 0;
-        padding-bottom: 22%;
+        height: 250px;
         position: relative;
-
         #slider {
             margin: 0;
             position: absolute;
@@ -524,8 +524,7 @@
             padding: 0;
 
             img {
-                width: 100%;
-                height: 100%;
+                @include img-fit(100%, auto);
             }
         }
 	}
