--- a/assets/scss/bases-dark.scss
+++ b/assets/scss/bases-dark.scss
@@ -422,6 +422,43 @@
 	  	color: $white;
 	  	display: inline-block;
     }
+    .collapsible-generic{
+        background-color: $darkgreyinput;
+        color: $white;
+        cursor: pointer;
+        width: 100%;
+        border: none;
+        text-align: left;
+        outline: none;
+        font-size: 15px;
+        border-radius: 3px;
+    }
+    .collapsible-generic span{
+        display: block;
+        font-size: 18px;
+        color: $white;
+        padding: 15px;
+    }
+
+    .active, .collapsible-generic:hover {
+        background-color: $darkgreymedium;
+    }
+
+    .collapsible-content-generic {
+        padding: 0 18px;
+        display: none;
+        flex-direction: column;
+        overflow: hidden;
+        background-color: $darkgreyinput;
+        border-bottom-left-radius: 3px;
+        border-bottom-right-radius: 3px;
+    }
+    .collapsible-content-generic label{
+        width: auto;
+        display: flex;
+        height: 50px;
+        align-items: center;
+    }
 }
 .form-row{
     width: 100%;
@@ -511,6 +548,7 @@
 	@include bloco(100%, 1200px, auto);
     border-radius: 5px;
     overflow: hidden;
+    box-shadow: $shadow;
 	.slider_content{
         width: 100%;
         height: 250px;
