--- a/assets/scss/mixins.scss
+++ b/assets/scss/mixins.scss
@@ -2,6 +2,7 @@
 	box-shadow: 0px -4px 32px 16px rgba(0,0,0,$alpha);
 }
 $shadow: 3px 12px 45px -2px rgba(0,0,0,0.3);
+$shadowlight: 3px 12px 45px -2px rgba(0,0,0,0.05);
 
 @mixin img-fit($w, $h){
 	width: $w;
