--- a/assets/scss/style-light.scss
+++ b/assets/scss/style-light.scss
@@ -396,6 +396,10 @@ a{
 //Fit Session
 .fit-session-block{
 	@include bloco(100%, 100%, auto);
+    box-shadow: $shadow;
+    overflow: hidden;
+    border-radius: 10px;
+    margin-bottom: 30px;
 	.fit-session-content-row{
 		@include bloco(100%, 100%, auto);
 	    max-height: 280px;
@@ -437,18 +441,19 @@ a{
 /* CABEÇALHO INDEX */
 #header-flat{
 	/*Container-mãe do cabeçalho da página index*/
-	@include bloco($width: 100%, $height: auto);
+	@include bloco(100%, 1140px, auto);
+    margin: 0 auto;
 	#header-flat-row1{
 		/*Container-filho do cabeçalh da indexo*/
 		@include bloco(100%, 100%, 300px, 300px);
 		overflow: hidden;
 		position: relative;
-		box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.1);
+		box-shadow: $shadow;
 		border-bottom-right-radius: 10px;
 		border-bottom-left-radius: 10px;
 		>img{
 			/*Imagem do cabeçalho da index*/
-			@include img-fit(1200px, 300px);
+			@include img-fit(1140px, 300px);
 			border-bottom-right-radius: 10px;
 			border-bottom-left-radius: 10px;
 		}
@@ -457,7 +462,7 @@ a{
 			@include bloco(100%, null, 100%);
 			@include position(absolute, 0, false, false, 0);
 			@include display(flex, column, center, left);
-			background: linear-gradient(to right, rgba(156, 194, 131, 1) 20%, rgba(255,217,76,0.3));
+			background: linear-gradient(to right, rgba(156, 194, 131, 0.9) 20%, rgba(255,217,76,0.2));
 			border-bottom-right-radius: 10px;
 			border-bottom-left-radius: 10px;
 			>h2{
@@ -1147,63 +1152,124 @@ a{
 //Perfil
 .profile-header-block{
 	@include bloco($width: 100%, $height: auto);
-	.profile-header-overlay{
-		@include bloco($width: 100%, $height: auto);
-		@include display(flex, row, center, center);
-		.profile-header-option{
-			width: 60px;
-			height: 60px;
-			border-radius: 50%;
-            cursor: pointer;
-            path{
-                fill: $olivine;
+    box-sizing: border-box;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.profile-header-card{
+    width: 100%;
+    max-width: 1200px;
+    height: auto;
+    background-color: $lightgrey;
+    border-radius: 5px;
+    margin: 0 auto;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: $shadow;
+    .profile-header-card-cover{
+        width: 100%;
+        max-width: 1200px;
+        height: 100%;
+        max-height: 320px;
+        padding: 0;
+        position: relative;
+        >img{
+            @include img-fit(100%, 320px);
+        }
+        >div{
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: rgba(0,0,0,0.15);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            >figure{
+                padding: 0;
+                width: 100%;
+                max-width: 200px;
+                height: auto;
+                box-sizing: border-box;
+                border: 5px solid white;
+                border-radius: 50%;
+                overflow: hidden;
+                box-shadow: $shadow;
+                >img{
+                    width: 100%;
+                    height: 100%;
+                    display: block;
+                    object-fit: cover;
+                }
             }
-            circle{
-                fill: $olivine;
+        }
+    }
+    .profile-header-card-infos{
+        >h2{
+            @include texto(28px, $black, 'Roboto Bold', 38px, center);
+            width: 95%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        >span{
+            @include texto(18px, $grey, 'Roboto Medium', 28px, center);
+            width: 95%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .profile-opts{
+            display: flex;
+            width: 100%;
+            max-width: 340px;
+            height: auto;
+            box-shadow: $shadowlight;
+            margin: 0 auto 15px auto;
+            overflow: hidden;
+            box-sizing: border-box;
+            padding-left: 15px;
+            padding-right: 15px;
+            >div{
+                width: 50%;
+                height: auto;
+                cursor: pointer;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background: $olivine;
+                transition: 200ms ease-in-out;
+                >span{
+                    @include texto(18px, $white, 'Roboto Bold', 28px, center);
+                    padding: 15px;
+                }
+                &:hover{
+                    background: $aspargus;
+                }
             }
-            >img{
-                @include img-fit(100%, 100%);
+            #one{
+                border-top-left-radius: 5px;
+                border-bottom-left-radius: 5px;
             }
-		}
-		.profile-header-image{
-			@include bloco($width: 250px, $height: 250px);
-			min-width: 250px;
-			min-height: 250px;
-			border-radius: 200px;
-			box-sizing: border-box;
-			background-color: $white;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			border: 5px solid $olivine;
-			>img{
-				@include img-fit(250px, 250px);
-				min-width: 250px;
-				min-height: 250px;
-				display: block;
-				margin: 0;
-				padding: 0;
-				border-radius: 200px;
-			}
-		}
-	}
-	.profile-name{
-		@include texto(28px, $black, 'Roboto Regular', 31px, center);
-	}
-	.profile-email{
-		@include texto(21px, $grey, 'Roboto Light', 23px, center);
-	}
+            #two{
+                border-top-right-radius: 5px;
+                border-bottom-right-radius: 5px;
+            }
+        }
+    }
 }
 .profile-section-block{
 	width: 100%;
 	height: auto;
 	display: flex;
 	flex-direction: row;
+    background-color: $lightgrey;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 	.profile-section-column{
 		width: 100%;
 		height: auto;
 		box-sizing: border-box;
-		border: 30px solid #FCFCFC;
+		border: 30px solid transparent;
 		>h3{
 			@include texto(21px, $black, 'Roboto Bold');
 		}
@@ -1230,6 +1296,7 @@ a{
 	position: relative;
 	box-shadow: $shadow;
 	z-index: 999;
+    transition: 200ms ease-in-out;
 	.profile-myactions-location, .profile-myactions-postdate{
 		@include texto(18px, $grey, 'Roboto Medium Italic');
 	}
@@ -1251,6 +1318,12 @@ a{
 		@include texto(16px, $darkgrey, 'Roboto Regular', 24px);
 		width: 80%;
 	}
+    &:hover{
+        background-color: $aspargus;
+        .profile-myactions-location, .profile-myactions-postdate{
+            @include texto(18px, $mediumgrey, 'Roboto Medium Italic');
+        }
+    }
 }
 .social-bar{
 	@include bloco(100px, null, 28px);
@@ -1413,8 +1486,7 @@ a{
 	#product-view-image-container{
 		@include bloco(100%, 600px, auto);
 	    box-sizing: border-box;
-	    border: 30px solid $lightgrey;
-	    background-color: $lightgrey;
+	    border: 30px solid transparent;
 		#product-view-image{
 			@include img-fit(100%, auto);
 		    border-top-left-radius: 10px;
@@ -1574,9 +1646,13 @@ a{
 .filter-menu{
     width: 100%;
     height: auto;
-    background-color: #E8E8E8;
+    background-color: $mediumgrey;
     display: flex;
     flex-direction: row;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    overflow: hidden;
+    box-shadow: $shadowlight;
 	.filter-menu-column{
 	    width: 100%;
 	    height: auto;
@@ -1734,7 +1810,12 @@ a{
 .personal-fitness-block{
 	@include bloco(100%, 100vw, 100vh);
 	@include display(flex, column, center, center);
-    background: linear-gradient(45deg, #9CC283, #EDBF85);
+    background-image: linear-gradient(
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.2)
+    ), url('../images/backgrounds/personal-fitness-cover.jpg');
+    background-attachment: fixed;
+    background-size: cover;
     position: relative;
 	.personal-fitness-content{
 	    width: auto;
@@ -1743,7 +1824,18 @@ a{
 	}
 }
 .column1{
-    width: auto; height: auto; box-sizing: border-box; padding: 0;
+    @include bloco(100%, 400px, auto);
+    box-sizing: border-box;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    img{
+        @include img-fit(400px, 400px);
+        -webkit-animation: pulse 3s infinite ease-in-out;
+        -o-animation: pulse 3s infinite ease-in-out;
+        -ms-animation: pulse 3s infinite ease-in-out;
+        -moz-animation: pulse 3s infinite ease-in-out;
+        animation: pulse 3s infinite ease-in-out;
+    }
 }
 .column2{
     width: auto;
@@ -1751,31 +1843,21 @@ a{
     height: auto;
     @include display(flex, column, center, center);
     >h2{
-	    font-size: 32px;
-	    color: #FFF;
-	    text-align: center;
-	    line-height: 28px;
-	    font-family: "Roboto Bold";
-	    text-shadow: 2px 2px 1px rgba(150, 150, 150, 0.5);
+        @include texto(42px, $white, 'Roboto Black', 58px, center);
 	    &:after{
 		    content: "";
 		    display: block;
 		    margin: 15px auto;
 		    width: 100px;
 		    height: 5px;
-		    background: #FFF;
+		    background: $white;
 		    border-radius: 50px;
-		    box-shadow: 2px 2px 1px rgba(150, 150, 150, 0.5);
+		    box-shadow: $shadow;
 	    }
     }
     >p{
-    	font-size: 21px;
-    	color: #FFF;
+        @include texto(21px, $mediumgrey, 'Roboto Regular', 32px, center);
     	margin: 0 auto;
-    	text-align: center;
-   		line-height: 28px;
-    	text-shadow: 2px 2px 1px rgba(150, 150, 150, 0.5);
-    	font-family: "Roboto Regular";
     }
 }
 .button{
@@ -1792,14 +1874,20 @@ a{
     color: #7F7F7F;
     transition: 300ms ease-in-out;
     >span{
-	    display: block;
-	    font-family: "Roboto Bold Italic";
-	    font-size: 18px;
+        @include texto(18px, $black, 'Roboto Bold Italic', null, center);
+    }
+    >a{
+        @include texto(18px, $black, 'Roboto Bold Italic', null, center);
     }
     &:hover{
 	    background-color: transparent;
-	    color: #FFF;
 	    cursor: pointer;
+        >span{
+            @include texto(18px, $white, 'Roboto Bold Italic', null, center);
+        }
+        >a{
+            @include texto(18px, $white, 'Roboto Bold Italic', null, center);
+        }
     }
 }
 .personal-fitness-pubs-block{
