--- a/assets/scss/style-light.scss
+++ b/assets/scss/style-light.scss
@@ -599,7 +599,6 @@ a{
 }
 .geral-pubs-block{
 	@include bloco(100%, 780px, auto);
-	background: $lightgrey;
 	margin: 124px auto 0px auto;
 	.geral-pubs-wrapper{
 		width: 100%;
@@ -634,7 +633,7 @@ a{
 }
 .publication{
 	@include bloco(100%, 100%, auto);
-    background: #eaeaea;
+    background: $mediumgrey;
     border-radius: 5px;
     overflow: hidden;
     box-shadow: $shadow;
@@ -643,11 +642,12 @@ a{
     @include img-fit(60px, 60px);
     border-radius: 50px;
     margin-right: 20px;
+    box-shadow: $shadow;
 }
 .profile-name-date-pub{
     @include bloco($width: 100%, $height: auto);
     @include display(flex, column, center, flex-start);
-    >h2{
+    >a{
         @include texto(21px, $black, 'Roboto Bold', 32px);
     }
     >h3{
@@ -1903,14 +1903,12 @@ a{
 .pub-row{
     width: 100%;
     height: auto;
-    background-color: #ddd;
+    background-color: $mediumgrey;
     position: relative;
     border-radius: 10px;
-    box-shadow: 0px 0px 36px 2px rgba(0,0,0,0.15);
+    box-shadow: $shadow;
 	>h2{
-	    font-size: 21px;
-	    color: #000;
-	    font-family: "Roboto Bold";
+        @include texto(21px, $black, 'Roboto Bold', 32px, left);
 		&:after{
 		    content: "";
 		    display: block;
@@ -1922,34 +1920,23 @@ a{
 		}
 	}
 	>p{
-	    font-size: 16px;
-	    color: #282828;
-	    font-family: "Roboto Regular";
+        @include texto(16px, $darkgrey, 'Roboto Bold', 24px, left);
 	    width: 80%;
-	    line-height: 24px;
 	}
 	>a{
-	    font-size: 18px;
-	    background-color: #E85858;
-	    display: block;
+        @include texto(18px, $white, 'Roboto Medium', 28px, center);
+	    background-color: $sunsetorange;
 	    box-sizing: border-box;
 	    width: 90px;
-	    text-align: center;
-	    line-height: 30px;
-	    color: #FFF;
 	    border-radius: 5px;
-	    font-family: "Roboto Medium";
-	    text-decoration: none;
 	    transition: 150ms ease-in-out;
 		&:hover{
-		    background-color: #E83131;
+		    background-color: $sunsetorange;
 		    font-family: "Roboto Bold";
 		}
 	}
 	>span{
-	    color: #7F7F7F;
-	    font-family: "Roboto Italic";
-	    display: block;
+        @include texto(18px, $grey, 'Roboto Italic', 24px, left);
 	}
 }
 //Publicação
@@ -1985,7 +1972,7 @@ a{
     width: 100%;
     height: auto;
     box-sizing: border-box;
-    border: 30px solid $lightgrey;
+    border: 30px solid transparent;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -1994,30 +1981,46 @@ a{
     width: 100%;
     height: auto;
     border-radius: 10px;
-    background-color: $white;
+    background-color: $mediumgrey;
     position: relative;
     margin-bottom: 30px;
+    box-shadow: $shadow;
+    overflow: hidden;
+    transition: 200ms ease-in-out;
+    &:hover{
+        cursor: pointer;
+        background: linear-gradient(45deg, $olivine, $gold);
+        >h2{
+            color: $white;
+            &:after{
+                background: $white;
+            }
+        }
+        p, .health-tricks-card-publishedby{
+            color: $lightgrey;
+        }
+    }
 	>h2{
-	    font-size: 21px;
-	    font-family: "Roboto Bold";
-	    color: #000;
-	    text-align: center;
+	    @include texto(21px, $black, 'Roboto Bold', 32px, center);
+        &:after{
+            content: "";
+            display: block;
+            margin: 0 auto;
+            background: $black;
+            width: 80px;
+            height: 3px;
+            border-radius: 20px;
+            margin-top: 15px;
+        }
 	}
 	>p{
-	    width: 80%;
-	    max-width: 500px;
-	    text-align: center;
-	    font-size: 16px;
-	    font-family: "Roboto Regular";
-	    color: #282828;
-	    margin: 0 auto;
+	    @include texto(16px, $grey, 'Roboto Regular', 26px, center);
+        width: 80%;
+        max-width: 500px;
+        margin: 0 auto;
 	}
 	.health-tricks-card-publishedby{
-	    font-family: "Roboto Medium Italic";
-	    font-size: 16px;
-	    text-align: center;
-	    display: block;
-	    color: #7F7F7F;
+	    @include texto(16px, $grey, 'Roboto Medium Italic', 26px, center);
 	}
 }
 
@@ -2425,15 +2428,16 @@ a{
 }
 .fitness-tips-card{
     @include bloco($width: 100%, $height: auto);
-    background-color: #F3F3F3;
+    background-color: $lightgrey;
     border-radius: 5px;
     margin-bottom: 30px;
     transition: 200ms ease-in-out;
+    box-shadow: $shadow;
     >h2{
         @include texto(21px, $black, 'Roboto Bold', 23px, left);
     }
     >p{
-        @include texto(18px, $black, 'Roboto Italic', 26px, left);
+        @include texto(18px, $darkgreymedium, 'Roboto Italic', 26px, left);
         width: 80%;
     }
     .fitness-tips-row{
